@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-./sensor_pid
+./sensor_pid -i /dev/i2c-1 -a 17
